# css-properties-anki-deck-generator

./: CSS-PROPERTIES-ANKI-DECK.txt  README.md  pyproject.toml
data/: css-properties-names-list.txt  mdn-css-properties-info.json
scripts/: create_anki_deck_file.py  scrape_mdn_and_create_deck.py  scrape_mdn_css_properties_docs.py
