[tool.poetry]
name = "css-properties-anki-deck-generator"
version = "0.1.0"
description = "Create an Anki deck of CSS properties by scraping the Mozilla Developer Network (MDN) CSS docs"
authors = ["J.I. Cruz <ji@jicruz.com>"]
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.66.2"

[tool.poetry.scripts]
scrape_mdn_css_properties_docs = "scripts.scrape_mdn_css_properties_docs:cli"
create_anki_deck_file = "scripts.create_anki_deck_file:cli"
scrape_mdn_and_create_deck = "scripts.scrape_mdn_and_create_deck:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
